# learn-langgraph

./: brainstorm.md  pyproject.toml
learn/: 0-basics.ipynb  1-stateful-graph.ipynb  10-routing.ipynb  11-orchestrator.ipynb  12-evaluator.ipynb  13-agents.ipynb  13-email-workflow.ipynb  14-checkpoint.ipynb  2-state-graph.ipynb  3-nodes.ipynb  4-edges.ipynb  5-loops.ipynb  6-tools.ipynb  7-memory.ipynb  8-prompt-chaining.ipynb  9-parralellization.ipynb  TASK1-hello_world.py  TASK2-greet.py  TASK3-greet.py  TASK4-hr.ipynb  TASK5-research-assistant.py  TASK6-chatbot.py  TASK7-drafter.py  TASK8-rag_agent.py
module-1/studio/: .env.example  agent.py  router.py  simple.py
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
module-2/studio/: chatbot.py
module-2/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
